MANIFESTS/templates/03-ingress_template.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirectregex
spec:
  redirectRegex:
    regex: ^https://www\.(.*)
    replacement: https://${1}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: myingressroute
  namespace: default

spec:
  entryPoints:
    - websecure
    # - web

  routes:
  - match: Host(`devg4.duckdns.org`)
    kind: Rule
    services:
    - name: whoami
      passHostHeader: true
      port: 80
    middlewares:
        - name: redirectregex
  tls:
    certResolver: myresolver
    domains:
    - main: devg4.duckdns.org
